--- a/index.html
+++ b/index.html
@@ -18,8 +18,19 @@
 			}
 		</script>
 		<script type="module" src="js/main.js"></script>
+		<div id="overlay"></div>
 		<div id="Menu">
-		<a href="#" id="startGame" class="btn-flip" data-back="Play" data-front="Play"></a>
+		<a href="#" id="startGame" class="btn-flip" data-back="Waves Mode" data-front="Play"></a>
 		</div>
+		<div id="GameWonDiv"> Wave clear! 
+		</div>
+		<div id="SmallWonDiv"> Choose a powerup!
+		</div>
+		<div id="PowerUpsDiv">
+		<a href="#" id="leftPowerup" class="btn-flip-left" data-back="Get one more hearth and survive longer!" data-front="Play"></a>
+		<a href="#" id="middlePowerup" class="btn-flip-middle" data-back="Bigger fireballs and more damage!" data-front="Play"></a>
+		<a href="#" id="rightPowerup" class="btn-flip-right" data-back="More range and fireballs are faster!" data-front="Play"></a>
+		</div>
+		<a href="#" id="TryAgain" class="btn-flip" data-back="Go back to menu" data-front="Play again"></a>
 	</body>
 </html>
