Added loading screen

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 			}
 		</script>
 		<script type="module" src="js/main.js"></script>
+		<div id="LoadingScreen">
+			<img id='loadingImage' src="./img/Cat Mage.png"/>
+		</div>
 		<div id="overlay"></div>
 		<div id="Menu">
 		<a href="#" id="startGame" class="btn-flip" data-back="Waves Mode" data-front="Play"></a>
