--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			}
 		</script>
 		<script type="module" src="js/main.js"></script>
+		<div id="healtBar"><img  class='heart' src="./img/hearth.png"/><img  class='heart' src="./img/hearth.png"/></div>
 		<div id="LoadingScreen">
 			<img id='loadingImage' src="./img/Cat Mage.png"/>
 		</div>
