--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</div>
 		<a href="#" id="startGame" class="btn-flip" data-back="Play" data-front="Easy Mode"></a>
 		<a href="#" id="hardMode" class="btn-flip" data-back="More Challenge!" data-front="Hard Mode"></a>
-		<a href="#" id="invincibleMode" class="btn-flip" data-back="You're invincible!" data-front="God mode"></a>
+		<a href="#" id="invincibleMode" class="btn-flip" data-back="You're invincible!" data-front="Test mode"></a>
 		</div>
 		<div id="GameWonDiv"> Wave clear! 
 		</div>
